<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.TermsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:clipToPadding="false">

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textStyle="bold"
                android:text="Terms and Conditions" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:justificationMode="inter_character"
                android:text="@string/terms1"
                android:textSize="10sp" />

            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Account Creation"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:justificationMode="inter_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:text="@string/terms2"/>





            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Use of App"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:justificationMode="inter_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:text="@string/terms3"/>


            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Privacy Policy"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:justificationMode="inter_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:text="@string/terms4"/>



            <TextView
                android:layout_marginTop="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Update and Changes"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="12sp" />
            <TextView
                android:justificationMode="inter_character"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="10sp"
                android:text="@string/terms5"/>

        </LinearLayout>

        </androidx.cardview.widget.CardView>
    </ScrollView>



</FrameLayout>