<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.PrivacyFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp"
        android:clipToPadding="false"
        >

        <androidx.cardview.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:text="Privacy Policy" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_character"
                    android:text="@string/privacy_policy"
                    android:textSize="10sp" />

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Information We Collect"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:text="\tWe collect different types of information to provide and improve our services to you:"/>

                <TextView
                    android:justificationMode="inter_character"
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy2"
                    android:textSize="10sp" />



                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="How We Use Your Information"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:text="The information we collect is used for the following purposes:"/>

                <TextView
                    android:justificationMode="inter_character"
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy3"
                    android:textSize="10sp" />



                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Data Security"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
                <TextView
                    android:justificationMode="inter_character"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy4"
                    android:textSize="10sp" />



                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Your Rights"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:text="You have the right to access, update or delete your personal informatio at any time. "/>

                <TextView
                    android:justificationMode="inter_character"
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy5"
                    android:textSize="10sp" />


                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Changes to This Privacy Policy"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
                <TextView
                    android:justificationMode="inter_character"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy4"
                    android:textSize="10sp" />

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Agreement"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    android:textSize="12sp" />
                <TextView
                    android:justificationMode="inter_character"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/privacy_policy7"
                    android:textSize="10sp" />



            </LinearLayout>

        </androidx.cardview.widget.CardView>



    </ScrollView>

</FrameLayout>